--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 :root{
-    --pastel-pink : #F4BFBF
+    --pastel-pink : #F4BFBF;
+    --hover-color : #8CC0DE;
 }
 .articleClass{
     background-color: var(--pastel-pink);
@@ -24,13 +25,17 @@
 .cardTitle{
     margin-bottom: 0;
     margin-top: 5px;
-    
+    overflow: hidden;
     font-family: 'Roboto';
     font-size: 25px;
     padding: 5px;
     font-weight: bold;
     text-align: left;
     margin-left: 10px;
+}
+.cardTitle:hover{
+    color: var(--hover-color);
+
 }
 .cardArt{
     height: 150px;
@@ -45,6 +50,12 @@
     text-overflow: ellipsis;
     overflow: hidden;
     text-align: justify;
+    transition-property: font-size;
+    transition-duration: 0.9s;
+
+}
+.cardArt:hover{
+    font-size: 18px;
 
 }
 .cardLink{
@@ -57,5 +68,6 @@
 }
 
 .cardLink:hover{
-    color: #8CC0DE;
+    color: var(--hover-color);
 }
+
