--- a/src/singleArticle/singleArticle.css
+++ b/src/singleArticle/singleArticle.css
@@ -1,13 +1,13 @@
-article{
+.article{
     padding: 10px 80px 40px 100px;
 }
 
-p{
+.p{
     text-align: justify;
     text-justify: inter-word;
 }
 
-img {
+.img {
     float: left;
     height: 500px;
     padding-right: 20px;
@@ -15,7 +15,7 @@ img {
 
 }
 
-h1{
+.h1{
     font-weight: bolder;
     font-size: 30px;
     margin-bottom: 10px;
