--- a/src/singleArticle/singleArticle.css
+++ b/src/singleArticle/singleArticle.css
@@ -12,7 +12,7 @@
     height: 500px;
     padding-right: 20px;
 
-
+    
 }
 
 .h1{
@@ -20,3 +20,7 @@
     font-size: 30px;
     margin-bottom: 10px;
 }
+
+.preserve-whitespace {
+    white-space: pre-wrap;
+  }
