--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -6,7 +6,7 @@
     --hover-color : #8CC0DE;
 }
 .articleClass{
-    background-color: var(--pastel-pink);
+    background: #ECB390;
     margin-top: 30px;
 }
 
