--- a/src/Contact us/Contact.css
+++ b/src/Contact us/Contact.css
@@ -6,10 +6,7 @@
   padding: 40px 15px 30px;
   margin: 30px;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  background: -moz-linear-gradient(45deg, #F4BFBF 25%, #FAF0D7 50%, #f5d894 75%); 
-  background: -webkit-linear-gradient(45deg, #F4BFBF 25%, #FAF0D7 50%, #f5d894 75%); 
-  background: linear-gradient(45deg, #F4BFBF 25%, #FAF0D7 50%, #f5d894 75%); 
-  background-color: #8CC0DE;
+  background: #ECB390; 
   display: block;
   text-align: center;
   align-items: center;
