--- a/src/Recomendation/Recomendation.css
+++ b/src/Recomendation/Recomendation.css
@@ -32,7 +32,7 @@
 
 }
 .cardRecSubTitle{
-    font-family: 'Dancing Script';
+    font-family: 'Merriweather';
     font-weight: bold;
     color: #ECB390;
     font-size: 30px;
